vendored_parsers/tree-sitter-latex/test/corpus/math.txt
================================================================================
Simple displayed equation (dollar)
================================================================================

Foo $$ Bar Baz $$

--------------------------------------------------------------------------------

(source_file
  (text
    (word))
  (displayed_equation
    (text
      (word)
      (word))))

================================================================================
Simple displayed equation (command)
================================================================================

Foo \[ Bar Baz \]

--------------------------------------------------------------------------------

(source_file
  (text
    (word))
  (displayed_equation
    (text
      (word)
      (word))))

================================================================================
Displayed equation (mixed)
================================================================================

Foo \[ Bar Baz $$

--------------------------------------------------------------------------------

(source_file
  (text
    (word))
  (displayed_equation
    (text
      (word)
      (word))))

================================================================================
Displayed equation (nested)
================================================================================

Foo $$ Bar Baz \[ Qux \] $$

--------------------------------------------------------------------------------

(source_file
  (text
    (word))
  (displayed_equation
    (text
      (word)
      (word))
    (displayed_equation
      (text
        (word)))))

================================================================================
Displayed equation (flat)
================================================================================

Foo $$ Bar $$ Baz $$ Qux $$

--------------------------------------------------------------------------------

(source_file
  (text
    (word))
  (displayed_equation
    (text
      (word)))
  (text
    (word))
  (displayed_equation
    (text
      (word))))

================================================================================
Simple inline formula (dollar)
================================================================================

Foo $ Bar Baz $

--------------------------------------------------------------------------------

(source_file
  (text
    (word))
  (inline_formula
    (text
      (word)
      (word))))

================================================================================
Simple inline formula (command)
================================================================================

Foo \( Bar Baz \)

--------------------------------------------------------------------------------

(source_file
  (text
    (word))
  (inline_formula
    (text
      (word)
      (word))))

================================================================================
Inline formula (mixed)
================================================================================

Foo \( Bar Baz $

--------------------------------------------------------------------------------

(source_file
  (text
    (word))
  (inline_formula
    (text
      (word)
      (word))))

================================================================================
Inline formula (nested)
================================================================================

Foo $ Bar Baz \( Qux \) $

--------------------------------------------------------------------------------

(source_file
  (text
    (word))
  (inline_formula
    (text
      (word)
      (word))
    (inline_formula
      (text
        (word)))))

================================================================================
Inline formula (flat)
================================================================================

Foo $ Bar $ Baz $ Qux $

--------------------------------------------------------------------------------

(source_file
  (text
    (word))
  (inline_formula
    (text
      (word)))
  (text
    (word))
  (inline_formula
    (text
      (word))))

================================================================================
Inline formula closed with double dollar
================================================================================

$ foo $$ bar

--------------------------------------------------------------------------------

(source_file
  (ERROR
    (text
      (word))
    (word)))

================================================================================
Simple math set
================================================================================

\{ 1, 2, 3 \}

--------------------------------------------------------------------------------

(source_file
  (generic_command
    (command_name))
  (text
    (word))
  (text
    (word))
  (text
    (word)
    (generic_command
      (command_name))))

================================================================================
Subscripts and superscripts
================================================================================

Foo_{bar}^2

--------------------------------------------------------------------------------

(source_file
  (text
    (word)
    (subscript
      (curly_group
        (text
        (word))))
    (superscript
      (word))))
